--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       sizes="180x180"
       href="%PUBLIC_URL%/apple-touch-icon.png"
     />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link
       rel="icon"
       type="image/png"
